# 42174-SmartTour

./: .gitignore  LICENSE  README.md  pyproject.toml
app/src/app/: page.module.css  page.tsx
app/src/components/: DailyPhotoGallery.tsx  RouteMap.tsx
app/src/lib/: placePhotos.tsx  smartourApi.tsx
docs/: architecture.md  backend-design.md
src/smartour/: main.py
src/smartour/api/: dependencies.py
src/smartour/api/routes/: itineraries.py
src/smartour/application/: itinerary_job_service.py  planning_service.py
src/smartour/core/: config.py  errors.py
src/smartour/domain/: itinerary.py
src/smartour/infrastructure/: rate_limit.py
src/smartour/infrastructure/repositories/: itineraries.py
src/smartour/integrations/google_maps/: field_masks.py  routes.py
tests/: test_itinerary_job_service.py  test_planning_service.py
