[project]
name = "smarttour"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]


[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6"
]

[tool.setuptools]
packages = ["scripts"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-environments = [
    "sys_platform == 'win32'"
]

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = ["docs"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
